<resources>
    <string name="app_name">Alarm Application</string>
    <string name="go_to_home">Go to Home</string>
    <string name="new_alarm">New alarm</string>
    <string name="medicine_name">Medicine name</string>
    <string name="dosage">Dosage</string>
    <string name="unit">Unit</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>